--- a/templates/flasgger/index.html
+++ b/templates/flasgger/index.html
@@ -85,12 +85,12 @@
                     <section class="block col-12">
                         <div class="info">
                             <hgroup class="main">
-                                <h2 class="title">httpbin.org
+                                <h2 class="title">httpbin
                                     <small>
                                         <pre class="version">0.9.2</pre>
                                     </small>
                                 </h2>
-                                <pre class="base-url">[ Base URL: httpbin.org/ ]</pre>
+                                <pre class="base-url">[ Base URL: httpbin-vercel.vercel.app/ ]</pre>
                             </hgroup>
                             <div class="description">
                                 <div class="markdown">
